--- a/ln/build.gradle
+++ b/ln/build.gradle
@@ -9,17 +9,17 @@ android {
     defaultConfig {
         minSdkVersion 4
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.1.2"
     }
     buildTypes {
     }
 }
 
-def siteUrl = 'https://github.com/niranjan94/ln'      // Homepage URL of the library
-def gitUrl = 'https://github.com/niranjan94/ln.git'   // Git repository URL
-version = "1.0"
-group = "com.niranjan.ln"                            // Maven Group ID for the artifact
+def siteUrl = 'https://github.com/niranjan94/ln'
+def gitUrl = 'https://github.com/niranjan94/ln.git'
+version = "1.1.2"
+group = "com.niranjan.ln"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -27,16 +27,14 @@ dependencies {
 
 install {
     repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
         pom {
             project {
                 packaging 'jar'
 
-                // Add your description here
                 name 'Ln - Android Logging Simplified'
+                description 'Ln is a simple wrapper for Android\'s default Log implementation (android.util.Log). It is derived from RoboGuice\'s internal logging utility.'
                 url siteUrl
 
-                // Set your license
                 licenses {
                     license {
                         name 'The Apache Software License, Version 2.0'
@@ -62,6 +60,18 @@ install {
 }
 
 dependencies {
+
+}
+
+
+android.libraryVariants.all { variant ->
+    def name = variant.buildType.name
+    if (!name.equals("debug")) {
+        def task = project.tasks.create "${name}-${version}", Jar
+        task.dependsOn variant.javaCompile
+        task.from variant.javaCompile.destinationDir
+        artifacts.add('archives', task);
+    }
 }
 
 task sourcesJar(type: Jar) {
@@ -92,6 +102,8 @@ properties.load(project.rootProject.file('local.properties').newDataInputStream(
 bintray {
     user = properties.getProperty("bintray.user")
     key = properties.getProperty("bintray.apikey")
+    def ossUser = user
+    def ossPassword = properties.getProperty("oss.password")
 
     configurations = ['archives']
     pkg {
@@ -99,8 +111,21 @@ bintray {
         name = "Ln-AndroidLoggingSimplified"
         websiteUrl = siteUrl
         vcsUrl = gitUrl
-        licenses = ["Apache-2.0"]
         publish = true
+        licenses = ['Apache-2.0']
+
+        version {
+            gpg {
+                sign = true //Determines whether to GPG sign the files. The default is false
+            }
+            //Optional configuration for Maven Central sync of the version
+            mavenCentralSync {
+                sync = false //Optional (true by default). Determines whether to sync the version to Maven Central.
+                user = ossUser //OSS user token
+                password = ossPassword //OSS user password
+            }
+        }
+
     }
 }
 bintrayUpload.mustRunAfter javadoc
